# vbat-uav-notebooks

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  Untitled.ipynb  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  design-pipeline.yml  docs.yml  paper.yml  release.yml
adr/: 0001-one-way-design-pipeline.md  0002-all-physics-in-src-no-magic-numbers.md  0003-cots-edf-derived-disk-loading.md  0004-dual-roll-control-vanes-and-ailerons.md  0005-mass-fraction-carve-out-with-traceability.md  0006-tag-driven-versioning-and-ci-tiers.md  0007-vibration-isolation.md  0008-segmented-fdm-construction.md  0009-thermal-paths-as-structure.md  0010-semi-monocoque-clamshell.md  0011-px4-flight-validation-before-custom-fc.md  0012-post-freeze-as-selected-resolve.md  0013-thin-notebooks-code-in-src.md  0014-battery-pack-transient-thermal-check.md  0015-naca-4412-airfoil-reselection.md  0016-aeolion-geometry-handoff.md  0017-prop-blade-clark-y-section-and-rotation-sense.md  0018-aeolion-handoff-own-notebook.md  README.md
assets/pages/: viewer.html
cfd/: README.md
cfd/postprocess/: foam2dml.py  foam2dml_prop.py
cfd/prop/: Allrun.prop  make_geom.py
cfd/vanes/: Allrun.vanes
cfd/vehicle/: Allrun.case  (+2 more)
config/: aeolion.yaml  aerodynamics.yaml  aileron.yaml  airfoil_selection.yaml  avionics.yaml  battery.yaml  electrical.yaml  forward_flight_params.yaml  fuselage.yaml  initial_weight_fraction_estimation.yaml  mission.yaml  modularity.yaml  prop_geometry.yaml  propulsive_system_efficiencies.yaml  propulsive_system_parameters.yaml  rotor.yaml  thermal.yaml  vibration.yaml  wing_structure_params.yaml
docs/: assumptions.md  battery_model.md  cruise_model.md  hover_model.md  roadmap.md
notebooks/: Untitled.ipynb  aeolion_handoff.ipynb  aileron_design.ipynb  aileron_design_cots.ipynb  airfoil_wing_design.old  control_vane_design.ipynb  cots_selection.ipynb  design_summary.ipynb  fuselage_design.ipynb  fuselage_design_cots.ipynb  mass_properties.ipynb  thermal_design.ipynb  vbat_conceptual_design.ipynb  vbat_conceptual_design.old  vehicle_solid_model.ipynb  vibration_isolation.ipynb  vibration_isolation_cots.ipynb  wing_design.ipynb  wiring_diagram.ipynb
paper/: Makefile  README.md  main.tex  references.bib
printprep/: step2print.py  wing_lighten.py
px4/: README.md
schemas/: vbat-aeolion-geometry-handoff.schema.json
scripts/: dump_repo.py  render_readme_cad.py
src/: __init__.py  models.py  sizing.py
tests/: conftest.py  test_aeolion_handoff.py  test_config_loading.py  test_design_outputs.py  test_electrical_diagram.py  test_forward_flight_power.py  test_geometry.py  test_mass_closure.py  test_prop_geometry.py  test_vtol_power.py  test_wing_sizing.py
(+70 files in other folders)
